# AndroidUSBCamera

./: build.gradle
app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
libausbc/: build.gradle
libausbc/src/main/java/com/jiangdg/ausbc/base/: BaseBottomDialog.kt
libausbc/src/main/java/com/jiangdg/ausbc/encode/muxer/: Mp4Muxer.kt
libausbc/src/main/java/com/jiangdg/ausbc/render/: RenderManager.kt
libnative/: build.gradle
libnative/src/main/cpp/: CMakeLists.txt
libuvc/: build.gradle
libuvc/src/main/java/com/jiangdg/usb/: USBMonitor.java
libuvc/src/main/jni/: Application.mk
libuvc/src/main/jni/UVCCamera/: Android.mk
libuvc/src/main/jni/libjpeg-turbo-1.5.0/: Android.mk
libuvc/src/main/jni/libusb/android/jni/: Android.mk  Application.mk
libuvc/src/main/jni/libuvc/android/jni/: Android.mk
